Minor UI improvements and bug fixes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="card">
                             <div class="card-head">
                                 <a href="#!">
-                                    <img src="./images/jacket.jpg" alt="Product image">
+                                    <img loading="lazy" src="./images/jacket.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
                                     <i class="far fa-heart"></i>
@@ -92,7 +92,7 @@
                         <div class="card">
                             <div class="card-head">
                                 <a href="#!">
-                                    <img src=".//images/sweat-shirt.jpg" alt="Product image">
+                                    <img loading="lazy" src=".//images/sweat-shirt.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
                                     <i class="far fa-heart"></i>
@@ -112,7 +112,7 @@
                         <div class="card">
                             <div class="card-head">
                                 <a href="#!">
-                                    <img src="./images/air-force-1.jpeg" alt="Product image">
+                                    <img loading="lazy" src="./images/air-force-1.jpeg" alt="Product image">
                                 </a>
                                 <button class="btn">
                                     <i class="far fa-heart"></i>
@@ -137,7 +137,7 @@
                         <div class="card">
                             <div class="card-head">
                                 <a href="#!">
-                                    <img src="./images/air-force-1.jpeg" alt="Product image">
+                                    <img loading="lazy" src="./images/air-force-1.jpeg" alt="Product image">
                                 </a>
                                 <button class="btn">
                                     <i class="far fa-heart"></i>
@@ -157,7 +157,7 @@
                         <div class="card">
                             <div class="card-head">
                                 <a href="#!">
-                                    <img src="./images/sweat-shirt.jpg" alt="Product image">
+                                    <img loading="lazy" src="./images/sweat-shirt.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
                                     <i class="far fa-heart"></i>
@@ -177,7 +177,7 @@
                         <div class="card">
                             <div class="card-head">
                                 <a href="#!">
-                                    <img src="./images/jacket.jpg" alt="Product image">
+                                    <img loading="lazy" src="./images/jacket.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
                                     <i class="far fa-heart"></i>
@@ -202,7 +202,7 @@
                         <div class="card">
                             <div class="card-head">
                                 <a href="#!">
-                                    <img src="./images/sweat-shirt.jpg" alt="Product image">
+                                    <img loading="lazy" src="./images/sweat-shirt.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
                                     <i class="far fa-heart"></i>
@@ -222,7 +222,7 @@
                         <div class="card">
                             <div class="card-head">
                                 <a href="#!">
-                                    <img src="./images/jacket.jpg" alt="Product image">
+                                    <img loading="lazy" src="./images/jacket.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
                                     <i class="far fa-heart"></i>
@@ -242,7 +242,7 @@
                         <div class="card">
                             <div class="card-head">
                                 <a href="#!">
-                                    <img src="./images/air-force-1.jpeg" alt="Product image">
+                                    <img loading="lazy" src="./images/air-force-1.jpeg" alt="Product image">
                                 </a>
                                 <button class="btn">
                                     <i class="far fa-heart"></i>
