Update product info

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="navbar-top">
                     <div class="logo">
-                        <p>The E Closet</p>
+                        <a href="/">The E Closet</a>
                     </div>
                     <form class="search" action="#">
                         <div class="search-box">
@@ -60,7 +60,7 @@
                         eligendi,
                         pariatur
                         tenetur!</p>
-                    <a href="#!" class="btn btn--accent">SHOP NOW</a>
+                    <a href="#!" class="btn btn--accent">SHOP NOW <i class="fas fa-arrow-right"></i></a>
                 </main>
             </div>
         </header>
@@ -80,8 +80,8 @@
                             </div>
                             <div class="card-body">
                                 <div class="details">
-                                    <p class="name">AirForce 1</p>
-                                    <p class="price">Ksh. 2500</p>
+                                    <p class="name">Jacket</p>
+                                    <p class="price">Ksh. 1500</p>
                                 </div>
                                 <button class="btn btn--outline btn--icon">
                                     <i class="fas fa-cart-plus"></i>
@@ -100,8 +100,8 @@
                             </div>
                             <div class="card-body">
                                 <div class="details">
-                                    <p class="name">AirForce 1</p>
-                                    <p class="price">Ksh. 2500</p>
+                                    <p class="name">Sweat Shirt</p>
+                                    <p class="price">Ksh. 900</p>
                                 </div>
                                 <button class="btn btn--outline btn--icon">
                                     <i class="fas fa-cart-plus"></i>
@@ -165,8 +165,8 @@
                             </div>
                             <div class="card-body">
                                 <div class="details">
-                                    <p class="name">AirForce 1</p>
-                                    <p class="price">Ksh. 2500</p>
+                                    <p class="name">Sweat Shirt</p>
+                                    <p class="price">Ksh. 900</p>
                                 </div>
                                 <button class="btn btn--outline btn--icon">
                                     <i class="fas fa-cart-plus"></i>
@@ -185,8 +185,8 @@
                             </div>
                             <div class="card-body">
                                 <div class="details">
-                                    <p class="name">AirForce 1</p>
-                                    <p class="price">Ksh. 2500</p>
+                                    <p class="name">Jacket</p>
+                                    <p class="price">Ksh. 1500</p>
                                 </div>
                                 <button class="btn btn--outline btn--icon">
                                     <i class="fas fa-cart-plus"></i>
@@ -210,8 +210,8 @@
                             </div>
                             <div class="card-body">
                                 <div class="details">
-                                    <p class="name">AirForce 1</p>
-                                    <p class="price">Ksh. 2500</p>
+                                    <p class="name">Sweat Shirt</p>
+                                    <p class="price">Ksh. 900</p>
                                 </div>
                                 <button class="btn btn--outline btn--icon">
                                     <i class="fas fa-cart-plus"></i>
@@ -230,8 +230,8 @@
                             </div>
                             <div class="card-body">
                                 <div class="details">
-                                    <p class="name">AirForce 1</p>
-                                    <p class="price">Ksh. 2500</p>
+                                    <p class="name">Jacket</p>
+                                    <p class="price">Ksh. 1500</p>
                                 </div>
                                 <button class="btn btn--outline btn--icon">
                                     <i class="fas fa-cart-plus"></i>
