Adding product page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         eligendi,
                         pariatur
                         tenetur!</p>
-                    <a href="#!" class="btn btn--accent">SHOP NOW <i class="fas fa-arrow-right"></i></a>
+                    <a href="#!" class="btn btn--accent">SHOP NOW</a>
                 </main>
             </div>
         </header>
@@ -71,7 +71,7 @@
                     <div class="products-content">
                         <div class="card">
                             <div class="card-head">
-                                <a href="#!">
+                                <a href="./product.html">
                                     <img loading="lazy" src="./images/jacket.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
@@ -91,7 +91,7 @@
                         </div>
                         <div class="card">
                             <div class="card-head">
-                                <a href="#!">
+                                <a href="./product.html">
                                     <img loading="lazy" src=".//images/sweat-shirt.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
@@ -111,7 +111,7 @@
                         </div>
                         <div class="card">
                             <div class="card-head">
-                                <a href="#!">
+                                <a href="./product.html">
                                     <img loading="lazy" src="./images/air-force-1.jpeg" alt="Product image">
                                 </a>
                                 <button class="btn">
@@ -136,7 +136,7 @@
                     <div class="products-content">
                         <div class="card">
                             <div class="card-head">
-                                <a href="#!">
+                                <a href="./product.html">
                                     <img loading="lazy" src="./images/air-force-1.jpeg" alt="Product image">
                                 </a>
                                 <button class="btn">
@@ -156,7 +156,7 @@
                         </div>
                         <div class="card">
                             <div class="card-head">
-                                <a href="#!">
+                                <a href="./product.html">
                                     <img loading="lazy" src="./images/sweat-shirt.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
@@ -176,7 +176,7 @@
                         </div>
                         <div class="card">
                             <div class="card-head">
-                                <a href="#!">
+                                <a href="./product.html">
                                     <img loading="lazy" src="./images/jacket.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
@@ -201,7 +201,7 @@
                     <div class="products-content">
                         <div class="card">
                             <div class="card-head">
-                                <a href="#!">
+                                <a href="./product.html">
                                     <img loading="lazy" src="./images/sweat-shirt.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
@@ -221,7 +221,7 @@
                         </div>
                         <div class="card">
                             <div class="card-head">
-                                <a href="#!">
+                                <a href="./product.html">
                                     <img loading="lazy" src="./images/jacket.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
@@ -241,7 +241,7 @@
                         </div>
                         <div class="card">
                             <div class="card-head">
-                                <a href="#!">
+                                <a href="./product.html">
                                     <img loading="lazy" src="./images/air-force-1.jpeg" alt="Product image">
                                 </a>
                                 <button class="btn">
