Adding products page

--- a/product.html
+++ b/product.html
@@ -42,41 +42,43 @@
                     </div>
                 </div>
                 <ul class="menu">
-                    <li><a href="#!" class="menu-item">Sneakers</a></li>
-                    <li><a href="#!" class="menu-item">Apparel</a></li>
-                    <li><a href="#!" class="menu-item">Jewelry</a></li>
-                    <li><a href="#!" class="menu-item">Accessories</a></li>
+                    <li><a href="./products.html" class="menu-item">Sneakers</a></li>
+                    <li><a href="./products.html" class="menu-item">Apparel</a></li>
+                    <li><a href="./products.html" class="menu-item">Jewelry</a></li>
+                    <li><a href="./products.html" class="menu-item">Accessories</a></li>
                 </ul>
             </div>
         </nav>
         <article class="product">
-            <div class="product-image">
-                <img src="./images/sweat-shirt.jpg" alt="Sweat Shirt">
-            </div>
-            <div class="product-details">
-                <h1 class="name">Sweat Shirt</h1>
-                <p class="price">Ksh 900</p>
-                <hr>
-                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus cum
-                    asperiores amet numquam sapiente vitae corporis quae? Velit deserunt illo, qui sequi doloribus
-                    voluptas eum iusto natus! Dolores, fuga quas?</p>
-                <hr>
-                <div class="colors">
-                    <div class="color" style="background: #000;"></div>
-                    <div class="color" style="background: #fff;"></div>
-                    <div class="color" style="background: #f00;"></div>
+            <div class="container">
+                <div class="product-image">
+                    <img src="./images/sweat-shirt.jpg" alt="Sweat Shirt">
                 </div>
-                <div class="sizes">
-                    <div class="size">L</div>
-                    <div class="size">M</div>
-                    <div class="size">SM</div>
-                </div>
-                <hr>
-                <div class="controls">
-                    <button class="btn btn--primary btn--icon"><i class="fas fa-cart-plus"></i><span
-                            class="btn-text">ADD TO
-                            CART</span></button>
-                    <button class="btn"><i class="far fa-heart"></i></button>
+                <div class="product-details">
+                    <h1 class="name">Sweat Shirt</h1>
+                    <p class="price">Ksh 900</p>
+                    <hr>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus cum
+                        asperiores amet numquam sapiente vitae corporis quae? Velit deserunt illo, qui sequi doloribus
+                        voluptas eum iusto natus! Dolores, fuga quas?</p>
+                    <hr>
+                    <div class="colors">
+                        <div class="color" style="background: #000;"></div>
+                        <div class="color" style="background: #fff;"></div>
+                        <div class="color" style="background: #f00;"></div>
+                    </div>
+                    <div class="sizes">
+                        <div class="size">L</div>
+                        <div class="size">M</div>
+                        <div class="size">SM</div>
+                    </div>
+                    <hr>
+                    <div class="controls">
+                        <button class="btn btn--primary btn--icon"><i class="fas fa-cart-plus"></i><span
+                                class="btn-text">ADD TO
+                                CART</span></button>
+                        <button class="btn"><i class="far fa-heart"></i></button>
+                    </div>
                 </div>
             </div>
         </article>
