--- a/products.html
+++ b/products.html
@@ -42,32 +42,23 @@
                     </div>
                 </div>
                 <ul class="menu">
-                    <li><a href="./products.html" class="menu-item">Sneakers</a></li>
-                    <li><a href="./products.html" class="menu-item">Apparel</a></li>
-                    <li><a href="./products.html" class="menu-item">Jewelry</a></li>
-                    <li><a href="./products.html" class="menu-item">Accessories</a></li>
+                    <li><a href="#!" class="menu-item">Sneakers</a></li>
+                    <li><a href="#!" class="menu-item">Apparel</a></li>
+                    <li><a href="#!" class="menu-item">Jewelry</a></li>
+                    <li><a href="#!" class="menu-item">Accessories</a></li>
                 </ul>
             </div>
         </nav>
-        <header class="header">
+        <header class="bunner">
             <div class="container">
                 <main>
-                    <h1 class="title">Flash Sale</h1>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem beatae eius
-                        libero velit quisquam
-                        laudantium
-                        tempore placeat esse obcaecati sit delectus atque expedita veritatis mollitia ex minima
-                        eligendi,
-                        pariatur
-                        tenetur!</p>
-                    <a href="#!" class="btn btn--accent">SHOP NOW</a>
+                    <h1 class="title">Apparel</h1>
                 </main>
             </div>
         </header>
         <article class="products">
             <div class="container">
-                <section class="product-section top_selling">
-                    <h2 class="section-title">Top Selling</h2>
+                <section class="product-section">
                     <div class="products-content">
                         <div class="card">
                             <div class="card-head">
@@ -129,100 +120,10 @@
                                 </button>
                             </div>
                         </div>
-                    </div>
-                </section>
-                <section class="product-section trending">
-                    <h2 class="section-title">Trending</h2>
-                    <div class="products-content">
                         <div class="card">
                             <div class="card-head">
                                 <a href="./product.html">
                                     <img loading="lazy" src="./images/air-force-1.jpeg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">AirForce 1</p>
-                                    <p class="price">Ksh. 2500</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src="./images/sweat-shirt.jpg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">Sweat Shirt</p>
-                                    <p class="price">Ksh. 900</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src="./images/jacket.jpg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">Jacket</p>
-                                    <p class="price">Ksh. 1500</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <section class="product-section featured">
-                    <h2 class="section-title">Featured</h2>
-                    <div class="products-content">
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src="./images/sweat-shirt.jpg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">Sweat Shirt</p>
-                                    <p class="price">Ksh. 900</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src="./images/jacket.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
                                     <i class="far fa-heart"></i>
@@ -242,7 +143,27 @@
                         <div class="card">
                             <div class="card-head">
                                 <a href="./product.html">
-                                    <img loading="lazy" src="./images/air-force-1.jpeg" alt="Product image">
+                                    <img loading="lazy" src="./images/jacket.jpg" alt="Product image">
+                                </a>
+                                <button class="btn">
+                                    <i class="far fa-heart"></i>
+                                </button>
+                            </div>
+                            <div class="card-body">
+                                <div class="details">
+                                    <p class="name">Sweat Shirt</p>
+                                    <p class="price">Ksh. 900</p>
+                                </div>
+                                <button class="btn btn--outline btn--icon">
+                                    <i class="fas fa-cart-plus"></i>
+                                    <span class="btn-text">ADD TO CART</span>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-head">
+                                <a href="./product.html">
+                                    <img loading="lazy" src="./images/sweat-shirt.jpg" alt="Product image">
                                 </a>
                                 <button class="btn">
                                     <i class="far fa-heart"></i>
