--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="navbar-top">
                     <div class="logo">
-                        <a href="/">The E Closet</a>
+                        <a href="/">The E Closet | <span>Admin</span></a>
                     </div>
                     <form class="search" action="#">
                         <div class="search-box">
@@ -34,10 +34,6 @@
                     </form>
                     <div class="controls">
                         <button class="btn search--toggle"><i class="fas fa-search"></i></button>
-                        <a href="#!" class="btn btn--outline">
-                            <i class="fas fa-shopping-cart"></i>
-                            <span class="btn-text">CART</span>
-                        </a>
                         <a href="#!" class="btn btn--primary">LOGIN</a>
                     </div>
                 </div>
@@ -49,242 +45,38 @@
                 </ul>
             </div>
         </nav>
-        <header class="header">
+        <article class="add-form">
             <div class="container">
-                <main>
-                    <h1 class="title">Flash Sale</h1>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem beatae eius
-                        libero velit quisquam
-                        laudantium
-                        tempore placeat esse obcaecati sit delectus atque expedita veritatis mollitia ex minima
-                        eligendi,
-                        pariatur
-                        tenetur!</p>
-                    <a href="#!" class="btn btn--accent">SHOP NOW</a>
-                </main>
-            </div>
-        </header>
-        <article class="products">
-            <div class="container">
-                <section class="product-section top_selling">
-                    <h2 class="section-title">Top Selling</h2>
-                    <div class="products-content">
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src="./images/jacket.jpg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">Jacket</p>
-                                    <p class="price">Ksh. 1500</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
+                <form action="#">
+                    <div class="product-details">
+                        <div class="image-preview">
+                            <img src="./images/preview.png" alt="Preview">
+                            <input type="file">
                         </div>
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src=".//images/sweat-shirt.jpg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">Sweat Shirt</p>
-                                    <p class="price">Ksh. 900</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src="./images/air-force-1.jpeg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">AirForce 1</p>
-                                    <p class="price">Ksh. 2500</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
+                        <div class="details-input">
+                            <label for="name" class="label">Name</label>
+                            <input type="text" id="name" class="input" placeholder="Product name">
+                            <label for="price" class="label">Price</label>
+                            <input type="text" id="price" class="input" placeholder="Product price">
+                            <label for="color" class="label">Color</label>
+                            <input type="color" id="color">
+                            <label for="size" class="label">Size</label>
+                            <select id="size" class="input">
+                                <option value="sm">SM</option>
+                                <option value="l">L</option>
+                                <option value="xl">XL</option>
+                            </select>
+                            <label for="description" class="label">Description</label>
+                            <textarea id="description" cols="30" rows="2" class="input"
+                                placeholder="Product description"></textarea>
                         </div>
                     </div>
-                </section>
-                <section class="product-section trending">
-                    <h2 class="section-title">Trending</h2>
-                    <div class="products-content">
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src="./images/air-force-1.jpeg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">AirForce 1</p>
-                                    <p class="price">Ksh. 2500</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src="./images/sweat-shirt.jpg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">Sweat Shirt</p>
-                                    <p class="price">Ksh. 900</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src="./images/jacket.jpg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">Jacket</p>
-                                    <p class="price">Ksh. 1500</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <section class="product-section featured">
-                    <h2 class="section-title">Featured</h2>
-                    <div class="products-content">
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src="./images/sweat-shirt.jpg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">Sweat Shirt</p>
-                                    <p class="price">Ksh. 900</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src="./images/jacket.jpg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">Jacket</p>
-                                    <p class="price">Ksh. 1500</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-head">
-                                <a href="./product.html">
-                                    <img loading="lazy" src="./images/air-force-1.jpeg" alt="Product image">
-                                </a>
-                                <button class="btn">
-                                    <i class="far fa-heart"></i>
-                                </button>
-                            </div>
-                            <div class="card-body">
-                                <div class="details">
-                                    <p class="name">AirForce 1</p>
-                                    <p class="price">Ksh. 2500</p>
-                                </div>
-                                <button class="btn btn--outline btn--icon">
-                                    <i class="fas fa-cart-plus"></i>
-                                    <span class="btn-text">ADD TO CART</span>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+                    <button class="btn btn--accent">ADD PRODUCT</button>
+                </form>
             </div>
         </article>
         <footer class="footer">
-            <div class="container">
-                <section class="copy">Copy &copy; The E Closet 2020</section>
-                <section class="postscript">
-                    <ul class="menu-items">
-                        <li><a href="#!" class="menu-item">About</a></li>
-                        <li><a href="#!" class="menu-item">Privacy policy</a></li>
-                        <li><a href="#!" class="menu-item">Return policy</a></li>
-                        <li><a href="#!" class="menu-item">Terms and conditions</a></li>
-                    </ul>
-                </section>
-                <div class="controls">
-                    <select class="zipcode input">
-                        <option value="Nairobi">Nairobi</option>
-                        <option value="Mombasa">Mombasa</option>
-                        <option value="Kisumu">Kisumu</option>
-                    </select>
-                    <section class="support">
-                        <a href="#!" class="btn btn--accent">GET SUPPORT</a>
-                    </section>
-                </div>
-            </div>
+            <section class="copy">Copy &copy; The E Closet 2020</section>
         </footer>
     </div>
 </body>
